--- a/fi-front/src/App.css
+++ b/fi-front/src/App.css
@@ -49,7 +49,7 @@
 */
 .area {
 	background: #5d5dff;
-	background: -webkit-linear-gradient(to left, #fcfcfc, #4e54c8);
+	background: -webkit-linear-gradient(to left, #4444cf, #4e54c8);
 	width: 100%;
 	height: 100vh;
 	position: absolute;
