--- a/fi-front/src/App.css
+++ b/fi-front/src/App.css
@@ -48,8 +48,8 @@
 -- Start BackGround Animation 
 */
 .area {
-	background: #5d5dff;
-	background: -webkit-linear-gradient(to left, #4444cf, #4e54c8);
+	background: #01018b;
+	background: -webkit-linear-gradient(to left, #0505ab, #030cac);
 	width: 100%;
 	height: 100vh;
 	position: absolute;
